About: A p5.js tropical cyclone simulation game

v20181203a:
    * Cleaned up the code:
        > Deleted defunct commented-out code
        > Moved various functions from sketch.js to more appropriate files (including the newly-added misc.js)
v20181202a:
    + Added text wrapping for storm info panel
    * constant-ified UI colors (plus some color tweaks)
    * Storm info panel no longer directly tied to selected storm
        > Now has its own "target" storm that changes in tandem upon clicking a storm icon
    * Fixed glitch with mouse-hover over overlapping UI elements
v20181201a:
    + Added an "extended storm info" UI box accessible by clicking the info text in the upper right while a storm is selected
        > Needs some work
v20181129a:
    > Graduated /experiments!
    * Renamed to "Cyclone Simulator"
    * Appropriate adjustments to main menu
    * Moved to new repository at a new URL
    * Copied over required files from /experiments directly into this project's directory
v20181128a:
    + Added constants for title and version number
    * Changed main menu title text to its final form for "Very Sad HHW Thing"/"Cyclone Simulator Classic"
v20181127a:
    + Added a help button (?) in the bottom-right which toggles a box containing keyboard controls
v20181125b:
    * Adjusted jetstream and ULSteering fields slightly to make early and late-season a bit more active
v20181125a:
    + Added hemisphere selection button in new basin settings
    * Made menu buttons shorter
    - Removed stupid yellow text
v20181122a:
    + Added a main menu
        > Currently only has a "New Basin" button and some silly text
    * Some minor improvements to UI
v20181118a:
    + Added some now-commented-out bust attempt at improving the storm algorithm
    * Tweaks to storm 'type' determination
    * Normalized ranges for moisture field and storm organization to 0-1 rather than 0-100
v20181117a:
    + Added "depth" to storm algorithm to help with steering and recurve