@@ -1,5 +1,10 @@
 About: A p5.js tropical cyclone simulation game
 
+v20181203b:
+    + Added viewing season stats in storm info side panel
+        > Click drop arrow button without storm selected to access
+    + Added drop arrow button for toggling the side panel next to the pause button
+        > Replaces the side panel "X" for closing it
 v20181203a:
     * Cleaned up the code:
         > Deleted defunct commented-out code
